# AStar-Lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: astar_liteConfig.cmake.in
examples/: CMakeLists.txt  grid_basic.cpp
include/: AStar-Lite.hpp
include/AStar-Lite/: result.hpp  types.hpp  utility.hpp
